# Open_ChemSearch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  setup.cfg
k8s/: Chart.yaml  values.yaml
k8s/templates/: pvc.yaml  service-account.yaml  stateful-set.yaml  storage-class.yaml  svc.yaml
src/chemsearch/: analysis.py  constants.py  exceptions.py  io.py  screen.py  utils.py
src/chemsearch/app/: __init__.py  config.py  dependencies.py  main.py  response.py  utils.py
src/chemsearch/database/: __init__.py  base.py  dask.py  factory.py  pandas.py  schema.py
src/chemsearch/fingerprints/: __init__.py  base.py  cpu.py  factory.py  gpu.py
src/chemsearch/molecule/: __init__.py  base.py  factory.py  rdkit.py  utils.py
src/chemsearch/scripts/: app.py  benchmark.py  fingerprints.py  parquet.py
tests/OriginalDatasets/: OriginalDatasets.md  OriginalDatasets.txt.txt
tests/SampleSettings/: sample.smi  sample_fingerprints.npy
tests/TestData/: Readme.md  sample.mol  sample.sdf  settings.json
tests/chemsearch/: test_analysis.py  test_io.py  test_screen.py
tests/chemsearch/app/: test_config.py  test_dependencies.py  test_main.py
tests/chemsearch/database/: test_dask.py  test_factory.py  test_pandas.py
tests/chemsearch/fingerprints/: test_base.py  test_cpu.py  test_factory.py  test_gpu.py
tests/chemsearch/molecule/: test_base.py  test_factory.py  test_rdkit.py  test_utils.py
tests/data2/: sample.parquet  settings.json
tests/logs/: flattened.csv
tests/queryFiles/: queries.smarts  queries.smi
