[metadata]
version = 0.1.0.dev0
name = chemsearch
description = Project for benchmarking substructure search.
url = https://github.com/ZIFODS/chemsearch
author = Andrew Whitehouse
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
package_dir = =src
packages = find:
python_requires = >= 3.11

[options.entry_points]
console_scripts =
    app = chemsearch.scripts.app:main
    benchmark = chemsearch.scripts.benchmark:main
    fingerprints = chemsearch.scripts.fingerprints:main
    parquet = chemsearch.scripts.parquet:main

[options.packages.find]
where = src
